# pymp4

./: .coveragerc  .travis.yml  3.cmfv  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cd.yml  ci.yml
src/pymp4/: adapters.py  cli.py  parser.py  subconstructs.py  summary.py  util.py
src/pymp4/tools/: mux.py
tests/: test_box.py  test_dashboxes.py  test_util.py  test_webvtt_boxes.py
