[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pymp4"
version = "1.3.2"
description = "Python parser for MP4 boxes"
authors = ["beardypig <git@beardypig.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/beardypig/pymp4"
repository = "https://github.com/beardypig/pymp4"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
construct = "2.8.8"

[tool.poetry.group.dev.dependencies]
codecov = "^2.1.12"
coverage = "^6.2.0"
pytest = "^7.0.1"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
mp4dump = "pymp4.cli:dump"
