[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pymp4"
version = "1.4.0"
description = "Python parser for MP4 boxes"
authors = ["beardypig <git@beardypig.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/beardypig/pymp4"
repository = "https://github.com/beardypig/pymp4"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
construct = "2.8.8"

[tool.poetry.group.dev.dependencies]
coverage = { version="^7.2.3", extras=["toml"] }
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
mp4dump = "pymp4.cli:dump"

[tool.coverage.run]
source = ["src/pymp4"]
omit = [".*", "*/site-packages/*", "*/python?.?/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
